[package]
name = "util_macros"
version = "0.1.0"
publish = false
license = "Apache-2.0"
description = "Utility macros for Zed"

[lints]
workspace = true

[lib]
path = "src/util_macros.rs"
proc-macro = true
doctest = false

[features]
perf-enabled = []

[package.edition]
workspace = true

[dependencies.quote]
workspace = true

[dependencies.syn]
workspace = true
